// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFormIndex simple getFormIndex for a user 1`] = `
Array [
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "invitation",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "notificationsSummary",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "event",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventCreation",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": -1,
    },
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 0,
    },
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 1,
    },
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 2,
    },
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": Object {
      "actions": "receive",
      "conditions": null,
      "entityName": "member",
      "fields": null,
      "id": 2,
      "identifier": 60815,
      "inverted": true,
      "reason": null,
      "subject": "eventUpdate",
    },
    "subject": "eventUpdate",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "fullName": "Bertho",
      "uid": 99999999,
    },
    "entityName": "user",
    "fields": null,
    "id": undefined,
    "identifier": 99999999,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventAggregation",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "id": undefined,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "event",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "id": undefined,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventCreation",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": -1,
    },
    "entity": Object {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "id": undefined,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 0,
    },
    "entity": Object {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "id": undefined,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 1,
    },
    "entity": Object {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "id": undefined,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 2,
    },
    "entity": Object {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "id": undefined,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "id": undefined,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": Object {
      "actions": "receive",
      "conditions": null,
      "entityName": "member",
      "fields": null,
      "id": 2,
      "identifier": 60815,
      "inverted": true,
      "reason": null,
      "subject": "eventUpdate",
    },
    "subject": "eventUpdate",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "agendaTitle": "Titre de l'agenda",
      "agendaUid": 456789,
      "crendential": 1,
      "id": 60815,
      "userUid": 99999999,
    },
    "entityName": "member",
    "fields": null,
    "id": undefined,
    "identifier": 60815,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventAggregation",
  },
]
`;

exports[`getFormIndex simple getFormIndex for an agenda 1`] = `
Array [
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "id": undefined,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventCreation",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": -1,
    },
    "entity": Object {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "id": undefined,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 0,
    },
    "entity": Object {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "id": undefined,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 1,
    },
    "entity": Object {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "id": undefined,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": Object {
      "state": 2,
    },
    "entity": Object {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "id": undefined,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "stateChange",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "id": undefined,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventUpdate",
  },
  Object {
    "actions": "receive",
    "conditions": null,
    "entity": Object {
      "title": "Titre de l'agenda",
      "uid": 48959239,
    },
    "entityName": "agenda",
    "fields": null,
    "id": undefined,
    "identifier": 48959239,
    "inverted": true,
    "reason": null,
    "relevantRule": null,
    "subject": "eventAggregation",
  },
]
`;
